# ckb-prediction-market

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  CSMM_DESIGN.md  DEADLINE_ENFORCEMENT.md  DECISIONS.md  PRODUCTION_REQUIREMENTS.md  PROGRESS.md  QUICK_START.md  README.md  TYPE_SCRIPT_DESIGN.md  cell_structure.md  manual-claim.ts  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
devnet/: .gitignore  Cargo.toml  README.md  SECURITY_TESTS.md  attack-change-market-args.sh  attack-drain.sh  attack-hijack-lock.sh  attack-tokens-no-market.sh  attack-unequal-mint.sh  burn-tokens-test.sh  create-market-burning-simple.sh  create-market-burning.sh  create-market.sh  frontend.html  mint-for-burning-test.sh  mint-simple.sh  mint-tokens.sh  privkey-account1.txt
devnet/src/: main.rs
examples/: 01-create-market.ts  02-place-bet.ts  03-view-market.ts  04-resolve.ts  05-claim.ts  check-market.ts  find-my-markets.ts  view-market-simple.ts
frontend-ccc/: README.md  index.html  serve.sh
scripts/: calc-token-hash.js  create-market.js  deploy-always-success.js  deploy-contracts.js  deploy-simple.js  deploy-token-from-old-market.js  deploy-token.js  deployed.json  find-market-cell.js  generate-key.js  get-code-hash.js  mint-tokens.js  package-lock.json  package.json  redeploy-with-token-cell.js  test-always-success-tx.json  test-always-success.js  upgrade-contract.js  upgrade-contracts.js  upgrade-market-lock.js  verify-typeid.js
src/: betting.ts  encoding.ts  market.ts  market.ts.backup  queries.ts  resolution.ts  types.ts  utils.ts
verdict/: admin.html  (+1 more)
(+23 files in other folders)
