[package]
name = "market-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-sdk = "3"
ckb-types = "0.200"
ckb-hash = "0.200"
ckb-jsonrpc-types = "0.200"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
secp256k1 = "0.30"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
